--- a/SharpDXGame/SharpDXGame.csproj
+++ b/SharpDXGame/SharpDXGame.csproj
@@ -62,6 +62,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game.cs" />
+    <Compile Include="GraphicsService.cs" />
+    <Compile Include="InputService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
